# mp_josemods

./: .editorconfig  .gitattributes  .gitignore  build.gradle  gradle.properties  launch_overlay.sh  settings.gradle
.github/workflows/: build-native.yml
server/: main.py  panel.html  squarecloud.app
src/main/: AndroidManifest.xml
src/main/java/com/android/support/: KeyActivity.java  MainActivity.java  OverlayService.java
src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  FF12.c++  GameHook.cpp  Include.h  MemoryReader.h  Overlay.h  SharedData.h  _KING_KONG_Offset_com.dts.freefiremax_2019117601_arm64-v8a.txt  injector.c  jawmods_diag.txt  main.cpp  main.cpp.bak  zygisk.hpp  zygisk_main.cpp
src/main/jni/.androidide/editor/: openedFiles.json.bak
src/main/jni/Il2Cpp/: il2cpp_dump.cpp
src/main/jni/include/Hook/KittyMemory/: KittyMemory.h  SubstrateDebug.cpp  SubstrateHook.cpp  SubstratePosixMemory.cpp  SymbolFinder.cpp
src/main/jni/include/ImGui/: ParticlesAnim.h  Toggle.h  imgui.h
src/main/jni/include/Utils/: Draw.h  Logger.h  MonoString.h  Unity.h  Utils.h  jniStuff.h  obfuscate.h  player.h
src/main/jni/include/Utils/Unity/: Color.h  MonoString.h  Rect.h  Vector3.h
src/main/jni/include/Utils/Unity/ByNameModding/: Il2Cpp.cpp  Il2Cpp.h  Tools.h
src/main/jni/include/Utils/Unity/il2cpp/: il2cpp-api-functions.h  il2cpp-class.h  il2cpp.h
src/main/jni/src/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
src/main/res/drawable/: btn_outline_green.xml
src/main/res/layout/: activity_key.xml  activity_main.xml
src/main/res/values/: colors.xml  strings.xml  styles.xml
